<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_networktables_bridge_host</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <author email="woz4tetra@gmail.com">woz4tetra</author>
  <maintainer email="emmemcdonald66@gmail.com">giragon6</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
